--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -50,7 +50,7 @@
     "mongoose": "https://github.com/Automattic/mongoose.git#89bcfcf24e5dc78c4542d2319bf63923e970a542",
     "morgan": "^1.6.1",
     "node-fetch": "^2.6.0",
-    "nodemailer": "^2.5.0",
+    "nodemailer": "6.4.10",
     "object-hash": "^1.3.1",
     "passport": "^0.4.0",
     "passport-globus": "^0.0.1",
