--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -11,6 +11,17 @@ server {
     # Use a variable to allow for IP changes when a new container starts
     # https://www.nginx.com/blog/dns-service-discovery-nginx-plus/#domain-name-proxy_pass
     set $openneuro_server server;
+    set $datalad_service datalad;
+
+    location /uploads {
+        client_max_body_size 0;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Connection "";
+        proxy_http_version 1.1;
+        proxy_request_buffering off;
+        proxy_pass http://$datalad_service:80;
+    }
 
     # crn-server proxy
     location /crn {
