--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -47,7 +47,7 @@
     "juice": "^2.0.0",
     "mime-types": "^2.1.19",
     "moment": "^2.14.1",
-    "mongoose": "https://github.com/Automattic/mongoose.git#89bcfcf24e5dc78c4542d2319bf63923e970a542",
+    "mongoose": "5.9.29",
     "morgan": "^1.6.1",
     "node-fetch": "^2.6.0",
     "nodemailer": "6.4.10",
