Fix missing robots.txt in production.

--- a/packages/openneuro-app/nginx.conf
+++ b/packages/openneuro-app/nginx.conf
@@ -9,6 +9,10 @@ server {
   gzip_types text/html application/json text/css;
 
   root /srv/app/dist;
+
+  # Return a well formed robots.txt
+  location /robots.txt {return 200 "User-agent: *\nAllow: /\n";}
+
   location /index.html {
     add_header Cache-Control 'no-cache';
   }
