--- a/helm/openneuro/templates/web-service.yaml
+++ b/helm/openneuro/templates/web-service.yaml
@@ -7,6 +7,8 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
+  annotations:
+    alb.ingress.kubernetes.io/healthcheck-path: /
 spec:
   ports:
   - port: 80
