Helm: Add elastic-apm-server

--- a/helm/openneuro/templates/secret.yaml
+++ b/helm/openneuro/templates/secret.yaml
@@ -38,3 +38,5 @@ stringData:
   MONGO_URL: {{ required "MONGO_URL with credentials is required" .Values.secrets.mongo.MONGO_URL | quote }}
   ENGINE_API_KEY: {{ .Values.secrets.apollo.ENGINE_API_KEY | quote }}
   ELASTICSEARCH_CONNECTION: {{ .Values.secrets.elasticsearch.ELASTICSEARCH_CONNECTION | quote }}
+  ELASTICSEARCH_CLOUD_ID: {{ .Values.secrets.elasticsearch.ELASTICSEARCH_CLOUD_ID | quote }}
+  ELASTICSEARCH_CLOUD_AUTH: {{ .Values.secrets.elasticsearch.ELASTICSEARCH_CLOUD_AUTH | quote }}
