--- a/helm/openneuro/Chart.yaml
+++ b/helm/openneuro/Chart.yaml
@@ -13,3 +13,6 @@ dependencies:
   - name: aws-alb-ingress-controller
     version: 1.0.0
     repository: https://kubernetes-charts-incubator.storage.googleapis.com/
+  - name: apm-server
+    version: 7.9.0
+    repository: https://helm.elastic.co
