--- a/helm/openneuro/templates/configmap.yaml
+++ b/helm/openneuro/templates/configmap.yaml
@@ -16,3 +16,4 @@ data:
   DATALAD_S3_PUBLIC_ON_EXPORT: "yes"
   LOCPATH: ""
   SENTRY_DSN: {{ .Values.sentryDsn | quote }}
+  ELASTIC_APM_SERVER_URL: http://{{ .Release.Name }}-apm-server:8200
