--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -17,6 +17,7 @@
   "author": "Squishymedia",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@elastic/apm-rum": "^5.5.0",
     "@emotion/core": "^10.0.4",
     "@emotion/styled": "^10.0.4",
     "@loadable/component": "^5.7.0",
