--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -31,6 +31,7 @@
     "crypto": "^1.0.1",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
+    "elastic-apm-node": "^3.7.0",
     "express": "^4.17.1",
     "graphql": "14.6.0",
     "graphql-bigint": "^1.0.0",
