--- a/packages/openneuro-cli/package.json
+++ b/packages/openneuro-cli/package.json
@@ -22,6 +22,7 @@
     "commander": "^2.15.1",
     "cross-fetch": "^3.0.5",
     "esm": "^3.0.16",
+    "fetch-h2": "^2.5.1",
     "find-config": "^1.0.0",
     "graphql-tag": "^2.10.3",
     "inquirer": "^5.2.0",
