import boto3 and pygithub

--- a/services/datalad/Pipfile
+++ b/services/datalad/Pipfile
@@ -23,10 +23,8 @@ gunicorn = "*"
 gevent = "*"
 elastic-apm = "*"
 falcon-elastic-apm = "*"
+sentry-sdk = {extras = [ "falcon",],version = "==0.16.1"}
+boto3 = "*"
 
 [requires]
 python_version = "3.8"
-
-[packages.sentry-sdk]
-extras = [ "falcon",]
-version = "==0.16.1"
