--- a/packages/openneuro-client/package.json
+++ b/packages/openneuro-client/package.json
@@ -12,12 +12,11 @@
     "apollo-client": "^2.6.8",
     "apollo-link": "^1.2.12",
     "apollo-link-context": "^1.0.18",
+    "apollo-link-http": "^1.5.17",
     "apollo-link-schema": "^1.2.3",
     "apollo-link-ws": "^1.0.18",
-    "apollo-upload-client": "https://github.com/nellh/apollo-upload-client-build.git#d7d4cd0d630bd5a8eee4bb2257d1cb267c797185",
     "cross-fetch": "^3.0.5",
     "esm": "^3.0.84",
-    "form-data": "^2.5.0",
     "graphql": "14.6.0",
     "graphql-tag": "^2.10.3",
     "graphql-tools": "4.0.6",
